# gemma4-rlvr

./: .env.example  .gitignore  .pre-commit-config.yaml  Gemma4_A100.ipynb  Gemma4_A100_billing_example.ipynb  Gemma4_A100_sudoku_tutorial.ipynb  METRICS.md  README.md  dd_explainer_data_generator.py  dd_explainer_gate.py  dd_explainer_rewards.py  dd_explainer_slot_decoder.py  dd_explainer_template_renderer.py  dd_explainer_two_stage.py  mise.toml  pyproject.toml  train.py
.error_analysis_cache/20260410T135954Z_20260417T135954Z/: metadata_direct_debit_faithfulness.json  report_graph_direct_debit_faithfulness.md
.error_analysis_cache/20260413T075447Z_20260420T075447Z/: metadata_direct_debit_faithfulness.json  report_evaluation_direct_debit_faithfulness.md  report_graph_direct_debit_faithfulness.md
.github/workflows/: lint.yml
config/: __init__.py  base.py  utils.py
configs/: smoke.yaml  train.yaml  train_fast.yaml  train_long.yaml  train_mem.yaml  train_v2_80gb.yaml  train_v3_26b_a4b.yaml
configs/schedules/: v1_explore.yaml  v2_baseline.yaml  v2_cap_neg_tails.yaml  v2_cap_neg_tails_v2.yaml  v2_data_regen.yaml  v2_granular_no_halluc.yaml  v2_lr_explore.yaml  v2_no_halluc_weighted.yaml  v2_prev_amount_slot.yaml  v2_slot_grounded.yaml  v2_step_time_relax.yaml  v3_baseline.yaml  v3_baseline_lr5e-6.yaml  v4_two_stage_grpo.yaml
data/: dd_dataset_20260424T174610Z_5500rows.meta.json  dd_dataset_20260427T201521Z_5500rows.meta.json  dd_fake_dataset_preview.json  dd_samples.json  eval_e27_pr_d_n1000.json  eval_e27_pr_d_n200.json  eval_e27_pr_d_n200_signflip_rescored.json  eval_e28_templates_n1000.json  eval_e28_v5_backfill_full_n1000.json  eval_e28_v5_backfill_gated_n1000.json  eval_e28_v5_templates_n1000.json  eval_e28_v5_wf_fixed_n1000.json  stage1_predictions_v5.json  stage1_probs_v5_eval_n1000.json  trigger_classifier_v5_bool_features.pt  two_stage_eval_pr_c_e27.json  two_stage_eval_pr_c_e27_n200.json  two_stage_eval_pr_c_e27_n200.per_row.jsonl
docs/: ceiling-diagnosis-2026-04-27.md  encoder-outlier-gate.md  production-error-analysis-mapping-2026-05-06.md  v2-80gb-migration.md  v3-26b-a4b-migration.md
docs/experiments/: README.md
docs/experiments/dd_explainer/encoder_outlier/: v0_gate.md
docs/experiments/dd_explainer/train_v2_80gb/: v2_data_regen.md  v2_granular_no_halluc.md  v2_no_halluc_weighted.md
docs/experiments/dd_explainer/train_v3_26b_a4b/: v3_baseline.md
docs/experiments/dd_explainer/two_stage/: v0_pipeline.md  v1_constrained.md  v2_slot_grounded.md
docs/experiments/train_v2_80gb/: v2_data_regen.md  v2_granular_no_halluc.md  v2_no_halluc_weighted.md
experiments/: _chart_widgets.py  _dd_explainer_progression.py  _pr_updater.py  _render_screenshot.py  autoresearch.py  current_run_updater.py  experiment_progress.py
experiments/dd_explainer/: current_run.json
experiments/dd_explainer/train/: retrospective_E28.md  retrospective_E28_templates.md  retrospective_E28_v5_templates.md  retrospective_trigger_backfill.md  retrospective_well_formed_fix.md
experiments/progress/dd_explainer_two_stage/: milestones.yaml
experiments/progress/dd_explainer_two_stage/token_confidence/: README.md
scripts/: build_outlier_set.py  compute_stage1_probs.py  eval_per_trigger_count.py  gated_eval.py  precompute_stage1_predictions.py  rerun_top5_remaining.sh  rerun_top_for_eval.sh  train_outlier_encoder.py  train_trigger_classifier.py  two_stage_eval.py
tests/: test_logprobs_capture.py  test_slot_decoder.py  test_slot_rubric.py  test_template_renderer.py  test_token_confidence_integration.py  test_two_stage_eval.py
