[project]
name = "gemma4-rl"
version = "0.1.0"
description = "Gemma 4 Reinforcement Learning (GRPO)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.8.0",
    "triton>=3.4.0",
    "torchvision",
    "numpy",
    "pillow",
    "bitsandbytes",
    # 5.5.0 has a regression in apply_chat_template that crashes on string
    # `content` fields (assumes multimodal list-of-dicts). 5.6.0+ tolerates both.
    "transformers>=5.6.0",
    "tokenizers",
    "trl>=0.28.0",
    "peft",
    "datasets",
    "timm",
    "unsloth @ git+https://github.com/unslothai/unsloth",
    "unsloth-zoo[base] @ git+https://github.com/unslothai/unsloth-zoo",
    "plotly>=6.0.0",
    "nvitop",
    "python-dotenv",
    "pydantic>=2.0",
    "hydra-core",
    "typer",
    "pandas",
    "wandb",
    "safetensors",
    "matplotlib",
    "pyyaml",
    # Slot-enforced JSON decoding for the dd_explainer two-stage pipeline (PR-B).
    # 0.11.3 imports `PreTrainedTokenizerBase` from `transformers.tokenization_utils`
    # which transformers 5.x moved — see compat shim in dd_explainer_slot_decoder.py.
    "lm-format-enforcer>=0.11.3",
    # Reusable sweep-orchestration tooling extracted from this repo.
    # Pinned to tag v0.0.3; once published to PyPI, drop the git+ssh prefix.
    "autoresearch @ git+ssh://git@github.com/charleneleong-ai/autoresearch.git@v0.15.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupyterlab",
    "ipywidgets",
    "tensorboard",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv]
# unsloth-zoo pins trl<0.24.0 and transformers<5.6.0 but the notebook installs
# both newer with --no-deps; override here to match that intent. transformers
# 5.5.0 has an apply_chat_template regression on string `content` — 5.6.0+ fixes
# it without breaking unsloth's runtime path.
override-dependencies = [
    "trl>=0.28.0",
    "transformers>=5.6.0",
]
# Unsloth builds from source — skip binary resolution for these
no-binary-package = ["unsloth", "unsloth-zoo"]
# This is a script-style project — train.py is the entry point, not a library.
# Skip wheel-building for the project itself; uv just resolves deps into .venv.
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# unsloth + unsloth-zoo are installed from git refs (see project.dependencies).
# Hatchling refuses direct references by default — flip this on so `uv sync`
# / `pip install -e .` can resolve them.
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "wandb",
    "outputs",
    "gemma_4_lora",
    "torch_cache",
    "hf_cache",
    "unsloth_compiled_cache",
    "experiments/dd_explainer",
    "experiments/progress",
    ".error_analysis_cache",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# typer requires `typer.Option(...)` calls in argument defaults — disable
# B008 globally (same workaround as the autoresearch package).
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
